# jax_metrics

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.py  sitemap.xml
.github/workflows/: create-release.yml  publish-package.yml  run-tests.yml
api/Loss/: index.html
api/Losses/: index.html
api/LossesAndMetrics/: index.html
api/Metric/: index.html
api/Metrics/: index.html
api/Named/: index.html
api/SumMetric/: index.html
docs/: index.md
docs/user-guide/: defining-modules.md  freezing-modules.md  initialization.md  intro.md  optimizer.md  state-management.md
jax_metrics/: __init__.py  types.py  utils.py
jax_metrics/losses/: cosine_similarity.py  crossentropy.py  huber.py  loss.py  mean_absolute_error.py  mean_absolute_percentage_error.py  mean_squared_error.py  mean_squared_logarithmic_error.py
jax_metrics/metrics/: __init__.py  accuracy.py  f_beta.py  losses.py  losses_and_metrics.py  mean.py  mean_absolute_error.py  mean_square_error.py  metric.py  metrics.py  reduce.py  utils.py
jax_metrics/regularizers/: l1l2.py
metrix/: __init__.py  utils.py
metrix/losses/: cosine_similarity.py  crossentropy.py  huber.py  loss.py  mean_absolute_error.py  mean_absolute_percentage_error.py  mean_squared_error.py  mean_squared_logarithmic_error.py
metrix/metrics/: accuracy.py  losses.py  losses_and_metrics.py  mean.py  mean_absolute_error.py  mean_square_error.py  metric.py  (+2 more)
scripts/: get-coverage.sh  update_docs.py  update_version.py
search/: search_index.json
(+75 files in other folders)
