[tool.poetry]
name = "jax_metrics"
version = "0.2.3"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgarciae/jax_metrics"
homepage = "https://cgarciae.github.io/jax_metrics"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu/"
secondary = true

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
einops = ">=0.4.0"
# simple_pytree = { path = "../simple-pytree", develop = true }
simple_pytree = ">=0.1.3"
optax = ">=0.1.1"
jax = "*"
jaxlib = "*"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.1"
pytest-cov = ">=3.0.0"
hypothesis = ">=6.37.1"
einops = ">=0.4.0"
torch = "^1.13.1+cpu"
torchmetrics = ">=0.7.2"
tensorflow-cpu = ">=2.8.0"
scipy = "!=1.10.1" #cannot install 1.10.1 for some reason

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.2.3"
mkdocstrings = {version = ">=0.20.0", extras = ["python"]}
mkdocs-material = ">=8.2.1"
mkdocs-jupyter = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.17.0"
typer = ">=0.4.0"
black = "23.1.0"
isort = "5.12.0"
ruff = "^0.0.252"

[tool.ruff]
line-length = 110

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

